--- a/HCMS/Views/Account/ChangePassword.cshtml
+++ b/HCMS/Views/Account/ChangePassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ChangePasswordViewModel
 
-<div class="accordion mt-4">
+<div class="accordion mt-4 shadow">
     <div class="accordion-item">
         <h1 class="accordion-header" id="headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -22,7 +22,7 @@
         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionBasic">
             <div class="accordion-body">
                 <div class="container-fluid">
-                    <form asp-action="ChangePassword" method="post" asp-controller="Account">
+                    <form asp-action="ChangePassword" id="form-spinner" method="post" asp-controller="Account">
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group">
@@ -44,12 +44,12 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <input type="submit" value="Submit" class="btn btn-primary" />
+                            <input type="submit" value="Update" class="btn btn-primary mt-3 " data-bs-toggle="modal" data-bs-target="#spinner-modal" />
                         </div>
                     </form>
 
-                    <div>
-                        <a asp-action="Index">Back to List</a>
+                    <div class="mt-4">
+                        <a class="btn btn-primary" asp-action="Index" title="back"><i class="fas fa-caret-left"></i></a>
                     </div>
 
 
