--- a/HCMS/Views/Account/login.cshtml
+++ b/HCMS/Views/Account/login.cshtml
@@ -7,26 +7,25 @@
     </div>
 }
 
-    <div class="container py-5 h-100">
+<div class="container py-5 h-100 ">
         <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-                <div class="card shadow-2-strong" style="border-radius: 1rem;">
-                    <div class="card-body p-5 text-center">
-                        <form asp-controller="Account" asp-action="Login" method="post">
+            <div class="col-8 col-md-8 col-lg-6 col-xl-5">
+                <div class="card shadow-2-strong">
+                <div class="card-body p-5 text-center shadow">
+                    <form asp-controller="Account" asp-action="Login" method="post" id="login-form">
                         <h3 class="mb-5">Log in</h3>
                         <div class="form-outline mb-4">
                             <label asp-for="UserName" class="form-label" for="typeEmailX-2">Email</label>
-                            <input asp-for="UserName" type="email" id="typeEmailX-2" class="form-control form-control-lg" />
-                            
+                            <input asp-for="UserName" type="email" id="typeEmailX-2" class="form-control form-control-lg text-center" />
                              <span asp-validation-for="UserName" class="text-danger"></span>
                         </div>
                         <div class="form-outline mb-4">
                             <label asp-for="Password" class="form-label" for="typePasswordX-2">Password</label>
-                            <input asp-for="Password" type="password" id="typePasswordX-2" class="form-control form-control-lg" />
+                            <input asp-for="Password" type="password" id="typePasswordX-2" class="form-control form-control-lg text-center" />
                            
                              <span asp-validation-for="Password" class="text-danger"></span>
                         </div>
-                        <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+                        <button class="btn btn-primary btn-lg btn-block"  type="submit">Login</button>
                     </form>
                     </div>
                 </div>
