--- a/HCMS/Views/speciality/Update.cshtml
+++ b/HCMS/Views/speciality/Update.cshtml
@@ -22,7 +22,7 @@
         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionBasic">
             <div class="accordion-body">
                 <div class="container-fluid">
-                    <form asp-action="Update" method="post" asp-controller="Speciality">
+                    <form asp-action="Update" method="post" id="form-spinner" asp-controller="Speciality">
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group">
