--- a/HCMS/wwwroot/css/site.css
+++ b/HCMS/wwwroot/css/site.css
@@ -1,55 +1,7 @@
-/*html {
-    font-size: 14px;
-}
 
-@media (min-width: 768px) {
-    html {
-        font-size: 16px;
-    }
-}
-
-html {
-    position: relative;
-    min-height: 100%;
-}
-
-body {
-    margin-bottom: 60px;
-}
-
-.sidebar {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    top: 0;
-    z-index: 100;
-    padding: 70px 0 0 10px;
-    border-right: 1px solid #d3d3d3;
-}
-
-.left-sidebar {
-    position: sticky;
-    top: 0;
-    height: calc(100vh - 70px)
-}
-
-.sidebar-nav li .nav-link {
-    color: #333;
-    font-weight: 500;
-}
-
-.form-control-primary {
-    margin: 10px;
-    opacity: 0.2;
-    border-radius: 2px;
-}
-
-.sidebar li .submenu {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    padding-left: 1rem;
-    padding-right: 1rem;
+.spinner-border {
+    width: 8rem;
+    height: 8rem;
 }
 */
 /* Set a fixed height for the sidebar */
