--- a/HCMS/Views/Account/Details.cshtml
+++ b/HCMS/Views/Account/Details.cshtml
@@ -3,7 +3,7 @@
 
 
 
-<div class="accordion mt-4">
+<div class="accordion mt-4 shadow">
     <div class="accordion-item">
         <h1 class="accordion-header" id="headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -57,7 +57,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="PhoneNumber" class="control-label">Contact Number</label>
-                                    <input readonly readonly asp-for="PhoneNumber" class="form-control" />
+                                    <input readonly asp-for="PhoneNumber" class="form-control" />
                                     <span asp-validation-for="PhoneNumber" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
@@ -71,6 +71,11 @@
                                 @*</div>*@
                             </div>
                             <div class="col-md-6">
+                                <div class="form-group">
+                                    <label asp-for="medicalLicenseNumber" class="control-label">Medical License Number</label>
+                                    <input readonly asp-for="medicalLicenseNumber" class="form-control" />
+                                    <span asp-validation-for="medicalLicenseNumber" class="text-danger"></span>
+                                </div>
                                 <div class="col-md-4">
                                     <label asp-for="specialityId" class="control-label">Speciality</label>
                                     @Html.DropDownListFor( m => m.specialityId ,ViewBag.options as SelectList, new {@class ="form-control", disabled = "disabled", type ="select"})
@@ -84,8 +89,8 @@
                         </div>
                     </form>
 
-                    <div>
-                        <a asp-action="Index">Back to List</a>
+                    <div class="mt-4">
+                        <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#spinner-modal" asp-action="Index" title="back"><i class="fas fa-caret-left"></i></a>
                     </div>
 
 
