--- a/HCMS/Views/Account/Update.cshtml
+++ b/HCMS/Views/Account/Update.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EditDoctorViewModel
 
 
-<div class="accordion mt-4">
+<div class="accordion mt-4 shadow">
     <div class="accordion-item">
         <h1 class="accordion-header" id="headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -24,7 +24,7 @@
             <div class="accordion-body">
                 <div class="container-fluid">
 
-                    <form asp-action="Update" method="post" asp-controller="Account">
+                    <form asp-action="Update" method="post" id="form-spinner" asp-controller="Account">
                         <div class="row">
                             <div class="col-md-6">
                                 @*<div class="col-md-4">*@
@@ -78,6 +78,11 @@
                                     <label asp-for="dob" class="control-label">Date of Birth</label>
                                     <input type="date" asp-for="dob" class="form-control" />
                                     <span asp-validation-for="dob" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="medicalLicenseNumber" class="control-label">Medical License Number</label>
+                                    <input asp-for="medicalLicenseNumber" class="form-control" />
+                                    <span asp-validation-for="medicalLicenseNumber" class="text-danger"></span>
                                 </div>@*
                                 <div class="form-group">
                                     <label asp-for="password" class="control-label">Password</label>
@@ -90,14 +95,14 @@
                                     <span asp-validation-for="confirmPassword" class="text-danger"></span>
                                 </div>*@
                                 <div class="form-group">
-                                    <input type="submit" value="Create" class="btn btn-primary" />
+                                    <input type="submit" value="Update" class="btn btn-primary  mt-3" />
                                 </div>
                             </div>
                         </div>
                     </form>
 
-                    <div>
-                        <a asp-action="Index">Back to List</a>
+                    <div class="mt-4">
+                        <a class="btn btn-primary" asp-action="Index" data-bs-toggle="modal" data-bs-target="#spinner-modal" title="back"><i class="fas fa-caret-left"></i></a>
                     </div>
 
 
