--- a/HCMS/Views/Admin/Update.cshtml
+++ b/HCMS/Views/Admin/Update.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EditAdminViewModel
 
 
-<div class="accordion mt-4">
+<div class="accordion mt-4 shadow">
     <div class="accordion-item">
         <h1 class="accordion-header" id="headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -24,7 +24,7 @@
             <div class="accordion-body">
                 <div class="container-fluid">
 
-                    <form asp-action="Update" method="post" asp-controller="Admin">
+                    <form asp-action="Update" id="form-spinner" method="post" asp-controller="Admin">
                         <div class="row">
                             <div class="col-md-6">
                                 @*<div class="col-md-4">*@
@@ -76,14 +76,14 @@
                                     <span asp-validation-for="dob" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <input type="submit" value="Create" class="btn btn-primary" />
+                                    <input type="submit" value="Update" class="btn btn-primary mt-3" />
                                 </div>
                             </div>
                         </div>
                     </form>
 
-                    <div>
-                        <a asp-action="Index">Back to List</a>
+                    <div class="mt-4">
+                        <a class="btn btn-primary" asp-action="AdminList" title="back"><i class="fas fa-caret-left"></i></a>
                     </div>
 
 
@@ -92,79 +92,3 @@
         </div>
     </div>
 </div>
-@*@*
-<h1>Create</h1>
-
-<h4>Admin</h4>
-<hr />
-
-<div class="row" style="border:solid;">
-    <h2>Admin Information</h2>
-    <form asp-action="Update" method="post" asp-controller="Admin">
-        <div class="col-md-4" style="border:solid;">
-            <div class="form-group">
-                <label asp-for="firstName" class="control-label"></label>
-                <input asp-for="firstName" class="form-control" />
-                <span asp-validation-for="firstName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="middleName" class="control-label"></label>
-                <input asp-for="middleName" class="form-control" />
-                <span asp-validation-for="middleName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="lastName" class="control-label"></label>
-                <input asp-for="lastName" class="form-control" />
-                <span asp-validation-for="lastName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="address" class="control-label"></label>
-                <input asp-for="address" class="form-control" />
-                <span asp-validation-for="address" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PhoneNumber" class="control-label"></label>
-                <input asp-for="PhoneNumber" class="form-control" />
-                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="gender" class="control-label"></label>
-                <label>Male</label>
-                @Html.RadioButtonFor(model => model.gender, "Male")
-
-                <label>Female</label>
-                @Html.RadioButtonFor(model => model.gender, "Female")
-            </div>
-        </div>
-        <h2>Patient Medical Record</h2>
-        <div class="form-group">
-            <label asp-for="dob" class="control-label"></label>
-            <input type="datetime" asp-for="dob" class="form-control" />
-            <span asp-validation-for="dob" class="text-danger"></span>
-        </div>
-      @*  <div class="form-group">
-            <label asp-for="password" class="control-label"></label>
-            <input type="text" asp-for="password" class="form-control" />
-            <span asp-validation-for="password" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="confirmPassword" class="control-label"></label>
-            <input type="text" asp-for="confirmPassword" class="form-control" />
-            <span asp-validation-for="confirmPassword" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <input type="submit" value="Create" class="btn btn-primary" />
-        </div>
-    </form>
-</div>
-
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>*@
-
