--- a/HCMS/Views/Appointment/Update.cshtml
+++ b/HCMS/Views/Appointment/Update.cshtml
@@ -1,6 +1,5 @@
 ﻿@model Appointment
-
-<div class="accordion mt-4">
+<div class="accordion mt-4 shadow" id="UpdateView">
     <div class="accordion-item">
         <h1 class="accordion-header" id="headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -22,7 +21,7 @@
         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionBasic">
             <div class="accordion-body">
                 <div class="container-fluid">
-                    <form asp-action="Update" method="post" asp-controller="Appointment">
+                    <form asp-action="Update" id="form-spinner" method="post" asp-controller="Appointment">
                         <div class="row">
                             <div class="alert alert-info" role="alert">
                                 Note: The case represents the Patient's Name and Reason for consultation.
@@ -36,17 +35,8 @@
                                     @* @Html.DropDownList("caseId",ViewBag.optionsForCases as SelectList ,ViewBag.option?[0], new {@class ="form-control"})*@
                                 </div>
                                 <div class="form-group">
+                                    <label asp-for="appointmentDay" class="control-label">Select Appointment Day</label>
                                     <input type="date" id="appointmentDay" asp-for="appointmentDay" class="datepicker form-control">
-                                    @* <label asp-for="appointmentDay" class="control-label">Select Appointment Day</label>
-                                    <select asp-for="appointmentDay" class="form-control">
-                                    <option value="Monday">Monday</option>
-                                    <option value="Tuesday">Tuesday</option>
-                                    <option value="Wednesday">Wednesday</option>
-                                    <option value="Thursday">Thursday</option>
-                                    <option value="Friday">Friday</option>
-                                    <option value="Saturday">Saturday</option>
-                                    <option value="Sunday">Sunday</option>
-                                    </select>*@
                                     <span asp-validation-for="appointmentDay" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
@@ -87,12 +77,17 @@
                             </div>
                         </div>
                          <div class="form-group">
-                        <input type="submit" value="Create" class="btn btn-primary" />
+                        <input type="submit" value="Update" class="btn btn-primary mt-3" />
                         </div>
-                    </form>
 
-                    <div>
-                        <a asp-action="Index">Back to List</a>
+                    </form>
+                    <form asp-controller="DoctorSchedule" method="get" target="_blank" id="myForm" asp-action="DoctorScheduleListFromAppointment">
+                        <input type="text" id="Id" name="Id" hidden />
+                        <a onclick="document.getElementById('myForm').submit()" class="btn btn-primary mt-3">check doctor schedule</a>
+                        
+                    </form>
+                    <div class="mt-3">
+                        <a class="btn btn-primary" asp-action="Index" title="back"><i class="fas fa-caret-left"></i></a>
                     </div>
 
 
