--- a/HCMS/Views/Case/Create.cshtml
+++ b/HCMS/Views/Case/Create.cshtml
@@ -7,7 +7,7 @@
     </div>
 }
 
-<div class="accordion mt-4">
+<div class="accordion mt-4 shadow">
     <div class="accordion-item">
         <h1 class="accordion-header" id="headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -29,7 +29,7 @@
         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionBasic">
             <div class="accordion-body">
                 <div class="container-fluid">
-                    <form asp-action="Create" method="post" asp-controller="Case">
+                    <form asp-action="Create" id="form-spinner" method="post" asp-controller="Case">
                         <div class="row">
                             <div class="alert alert-info" role="alert">
                                 Note: The case represents the Patient's Name and Reason for consultation.
@@ -46,26 +46,29 @@
                                     <input type="text" asp-for="reason"class="form-control"  />
                                     <span asp-validation-for="reason" class="text-danger"></span>
                                 </div>
-                                <div class="form-group">
-                                    <label asp-for="diagnosis" class="control-label">Diagnosis</label>
-                                    <input type="text" asp-for="diagnosis"  class="form-control"  />
-                                    <span asp-validation-for="diagnosis" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <label asp-for="treatmentPlan" class="control-label">treatment Plan</label>
-                                    <input type="text" asp-for="treatmentPlan" class="form-control"  />
-                                    <span asp-validation-for="treatmentPlan" class="text-danger"></span>
-                                </div>
+                                @if(User.IsInRole("Doctor")){
+                                    <div class="form-group">
+                                        <label asp-for="diagnosis" class="control-label">Diagnosis</label>
+                                        <textarea asp-for="diagnosis" class="form-control " style="height:200px; " />
+                                        <span asp-validation-for="diagnosis" class="text-danger"></span>
+                                    </div>
+                                    <div class="form-group">
+                                        <label asp-for="treatmentPlan" class="control-label">treatment Plan</label>
+                                        <textarea asp-for="treatmentPlan" class="form-control" style="height:200px; " />
+                                        <span asp-validation-for="treatmentPlan" class="text-danger"></span>
+                                    </div>
+                                }
+                               
                                 @*</div>*@
                             </div>
                         </div>
                         <div class="form-group">
-                            <input type="submit" value="Create" class="btn btn-primary" />
+                            <input type="submit" value="Create" class="btn btn-primary mt-3" />
                         </div>
                     </form>
 
-                    <div>
-                        <a asp-action="Index">Back to List</a>
+                    <div class="mt-3">
+                        <a class="btn btn-primary" asp-action="Index" title="back"><i class="fas fa-caret-left"></i></a>
                     </div>
 
 
