--- a/HCMS/Views/DoctorSchedule/AddDoctorSchedule.cshtml
+++ b/HCMS/Views/DoctorSchedule/AddDoctorSchedule.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @model Schedule
 
-<div class="accordion mt-4">
+<div class="accordion mt-4 shadow">
     <div class="accordion-item">
         <h1 class="accordion-header" id="headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -23,7 +23,7 @@
         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionBasic">
             <div class="accordion-body">
                 <div class="container-fluid">
-                    <form asp-action="addDoctorSchedule" method="post" asp-controller="DoctorSchedule">
+                    <form asp-action="addDoctorSchedule" id="form-spinner" method="post" asp-controller="DoctorSchedule">
                          <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group">
@@ -66,12 +66,12 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <input type="submit" value="Create" class="btn btn-primary" />
+                            <input type="submit" value="Create" class="btn btn-primary mt-3" />
                         </div>
                     </form>
 
-                    <div>
-                        <a asp-action="Index">Back to List</a>
+                    <div class="mt-3">
+                        <a class="btn btn-primary" asp-action="DoctorScheduleList" title="back"><i class="fas fa-caret-left"></i></a>
                     </div>
 
 
