--- a/HCMS/Views/Patient/Details.cshtml
+++ b/HCMS/Views/Patient/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Patient
 
 <form asp-action="" method="post" asp-controller="Patient">
-    <div class="accordion mt-4">
+    <div class="accordion mt-4 shadow">
         <div class="accordion-item">
             <h1 class="accordion-header" id="headingOne">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -45,7 +45,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="dob" class="control-label">Date of Birth</label>
-                                    <input readonly type="datetime" asp-for="dob" class="form-control" />
+                                    <input readonly type="date" asp-for="dob" class="form-control" />
                                     <span asp-validation-for="dob" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
@@ -77,13 +77,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
-                            <p>Medical Record</p>
-                            <div class="col-md-6">
-                            </div>
-                            <div class="col-md-6">
-                            </div>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
@@ -119,7 +113,7 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label asp-for="@Model.medical.bloodType" class="control-label"></label>
+                                        <label asp-for="@Model.medical.bloodType" class="control-label">Blood Type</label>
                                         <select readonly asp-for="@Model.medical.bloodType" class="form-control">
                                             <option value="A+">A+</option>
                                             <option value="A-">A-</option>
@@ -174,8 +168,8 @@
 
 </form>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+<div class="mt-3">
+    <a class="btn btn-primary" asp-action="index" title="back"><i class="fas fa-caret-left"></i></a>
 </div>
 
 @*<h1>Create</h1>
