--- a/HCMS/Views/Patient/edit.cshtml
+++ b/HCMS/Views/Patient/edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Patient
 
-<form asp-action="edit" method="post" asp-controller="Patient">
-    <div class="accordion mt-4">
+<form asp-action="edit" method="post" id="form-spinner" asp-controller="Patient">
+    <div class="accordion mt-4 shadow">
         <div class="accordion-item">
             <h1 class="accordion-header" id="headingOne">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -114,7 +114,7 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label asp-for="@Model.medical.bloodType" class="control-label"></label>
+                                        <label asp-for="@Model.medical.bloodType" class="control-label">Blood Type</label>
                                         <select asp-for="@Model.medical.bloodType" class="form-control">
                                             <option value="A+">A+</option>
                                             <option value="A-">A-</option>
@@ -247,14 +247,14 @@
         </div>
     </div>
     <div class="form-group">
-        <input type="submit" value="Update" class="btn btn-primary" />
+        <input type="submit" value="Update" class="btn btn-primary mt-3" />
     </div>
 
     
 </form>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+<div class="mt-3">
+    <a class="btn btn-primary" asp-action="index" title="back"><i class="fas fa-caret-left"></i></a>
 </div>
 @*
 <h1>Create</h1>
