--- a/HCMS/Views/speciality/Index.cshtml
+++ b/HCMS/Views/speciality/Index.cshtml
@@ -49,11 +49,28 @@
                                                 <a class="btn btn-secondary" asp-controller="Speciality" title="Update" asp-action="Update" asp-route-Id="@p.Id">
                                                     <i class="fas fa-edit"></i>
                                                 </a>
-                                                <a class="btn btn-danger" asp-controller="Speciality" title="Delete" asp-action="Delete" asp-route-Id="@p.Id">
+                                               @* <a type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteSpecializationModal@(p.Id)">
                                                     <i class="fas fa-user-times"></i>
-                                                </a>
+                                                </a>*@
                                             </td>
                                         </tr>
+                                        @*<div class="modal fade" id="deleteSpecializationModal@(p.Id)" tabindex="-1" aria-labelledby="deleteModalLabel@(p.Id)" aria-hidden="true">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h5 class="modal-title" id="deleteModalLabel@(p.Id)">Delete?</h5>
+                                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        Are you sure you want to delete this specialization?
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                                        <a asp-controller="Speciality" asp-action="Delete" asp-route-Id="@p.Id" class="btn btn-danger spin">Delete</a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>*@
                                     }
                                 </tbody>
                             </table>
